--- a/Translation/event.json
+++ b/Translation/event.json
@@ -201,7 +201,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bạn có thể vào sự kiện bất kỳ lúc nào, nhưng đây là khu PvP. Bạn chỉ có thể thu thập 10 Lõi Dung Nham vào túi mỗi lần, và sử dụng 5 Lõi Dung Nham mỗi ngày. Lõi Dung Nham cung cấp K.Nghiệm nguyên tố, nhưng luôn được 2 giám hộ canh gác.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -220,7 +220,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lõi dung nham xuất hiện mỗi {0} giây, và chỉ hồi lại khi tiêu diệt giám hộ. Cũng có khoảng thời gian trong ngày mà việc hồi lại diễn ra nhanh hơn rất nhiều và xuất hiện mỗi {1} giây.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -239,7 +239,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hãy cẩn thận để không để bị giết trong quá trình nhé. 👀",
         "ar":"",
         "it":"",
         "pl":"",
@@ -372,7 +372,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Trong sự kiện này, bạn có thể thủ thập bom và rương. Bom được sử dụng để chống lại người chơi khác, nhưng cũng cho K.Nghiệm và Vàng khi nhặt lên. Rương cho Celebeams cấp 50 và 70 phụ thuộc vào loại rương. Tất cả rương đều cho Mã Kim và Vàng. Tất cả phần thưởng K.Nghiệm, Mã Kim và Vàng phụ thuộc vào cấp của bạn.<br>Ở trung tâm bản đồ có một chiếc rương hoàng kim. Nó sẽ bị khóa trong hầu hết thời gian sự kiện và không chứa Celebeams, nhưng cho 10 lần Mã Kim.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -391,7 +391,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sự kiện này diễn ra trong 3 giai đoạn:",
         "ar":"",
         "it":"",
         "pl":"",
@@ -410,7 +410,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Giai Đoạn 1:",
         "ar":"",
         "it":"",
         "pl":"",
@@ -429,7 +429,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Giai đoạn này diễn ra trong 10 phút. Cấm PvP trong giai đoạn này, có nghĩa là tất cả bom mà bạn thu thập sẽ được tích lại, và chưa thể dùng.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -448,7 +448,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Giai Đoạn 2:",
         "ar":"",
         "it":"",
         "pl":"",
@@ -467,7 +467,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Giai đoạn này diễn ra trong 5 phút. PvP được bật, do đó bạn có thể dùng bom để tấn công người chơi khác. Cứ mỗi 30 giây, Obams sẽ hồi sinh bạn nếu bạn bị tiêu diệt.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -486,7 +486,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Giai Đoạn 3:",
         "ar":"",
         "it":"",
         "pl":"",
@@ -505,7 +505,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Giai đoạn này diễn ra trong 5 phút. Từ thời điểm này đến khi kết thúc sự kiện, nếu bạn chết, Obams sẽ đá bạn ra khỏi sự kiện. Rương hoàng kim sẽ được mở khóa, và chỉ có một người chơi có thể nhặt nó lên.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -524,7 +524,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hiệu Ứng Bom:",
         "ar":"",
         "it":"",
         "pl":"",
