--- a/Translation/general.json
+++ b/Translation/general.json
@@ -49,7 +49,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đột Kích",
         "ar":"",
         "it":"",
         "pl":"",
@@ -733,7 +733,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Xác nhận bán {0} để nhận {1} Lễ Kim?",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1265,7 +1265,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hàng Tuần",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1284,7 +1284,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Điểm",
         "ar":"",
         "it":"",
         "pl":"",
