--- a/Translation/item.json
+++ b/Translation/item.json
@@ -19927,7 +19927,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 1 Tinh Chất Sinh Lực",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -19946,7 +19946,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 2 Tinh Chất Sinh Lực",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -19965,7 +19965,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 3 Tinh Chất Sinh Lực",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -19984,7 +19984,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 4 Tinh Chất Sinh Lực",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20003,7 +20003,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 5 Tinh Chất Sinh Lực",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20022,7 +20022,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 7 Tinh Chất Sinh Lực",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20041,7 +20041,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 7 Tinh Chất Sinh Lực",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20060,7 +20060,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 8 Tinh Chất Sinh Lực",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20079,7 +20079,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 9 Tinh Chất Sinh Lực",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20098,7 +20098,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 10 Tinh Chất Sinh Lực",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20117,7 +20117,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 1 Tinh Chất Sát Lực",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20136,7 +20136,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 2 Tinh Chất Sát Lực",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20155,7 +20155,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 3 Tinh Chất Sát Lực",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20174,7 +20174,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 4 Tinh Chất Sát Lực",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20193,7 +20193,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 5 Tinh Chất Sát Lực",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20212,7 +20212,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 6 Tinh Chất Sát Lực",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20231,7 +20231,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 7 Tinh Chất Sát Lực",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20250,7 +20250,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 8 Tinh Chất Sát Lực",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20269,7 +20269,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 9 Tinh Chất Sát Lực",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20288,7 +20288,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 10 Tinh Chất Sát Lực",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20307,7 +20307,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 1 Tinh Chất Tốc Độ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20326,7 +20326,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 2 Tinh Chất Tốc Độ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20345,7 +20345,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 3 Tinh Chất Tốc Độ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20364,7 +20364,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 4 Tinh Chất Tốc Độ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20383,7 +20383,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 5 Tinh Chất Tốc Độ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20402,7 +20402,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 6 Tinh Chất Tốc Độ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20421,7 +20421,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 7 Tinh Chất Tốc Độ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20440,7 +20440,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 8 Tinh Chất Tốc Độ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20459,7 +20459,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 9 Tinh Chất Tốc Độ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20478,7 +20478,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 10 Tinh Chất Tốc Độ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20497,7 +20497,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 1 Tinh Chất Dã Man",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20516,7 +20516,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 2 Tinh Chất Dã Man",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20535,7 +20535,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 3 Tinh Chất Dã Man",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20554,7 +20554,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 4 Tinh Chất Dã Man",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20573,7 +20573,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 5 Tinh Chất Dã Man",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20592,7 +20592,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 6 Tinh Chất Dã Man",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20611,7 +20611,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 7 Tinh Chất Dã Man",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20630,7 +20630,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 8 Tinh Chất Dã Man",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20649,7 +20649,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 9 Tinh Chất Dã Man",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20668,7 +20668,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 10 Tinh Chất Dã Man",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20687,7 +20687,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 1 Tinh Chất Thủ Hộ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20706,7 +20706,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 2 Tinh Chất Thủ Hộ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20725,7 +20725,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 3 Tinh Chất Thủ Hộ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20744,7 +20744,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 4 Tinh Chất Thủ Hộ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20763,7 +20763,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 5 Tinh Chất Thủ Hộ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20782,7 +20782,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 6 Tinh Chất Thủ Hộ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20801,7 +20801,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 7 Tinh Chất Thủ Hộ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20820,7 +20820,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 8 Tinh Chất Thủ Hộ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20839,7 +20839,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 9 Tinh Chất Thủ Hộ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20858,7 +20858,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 10 Tinh Chất Thủ Hộ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20877,7 +20877,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 1 Tinh Chất Chấn Thương",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20896,7 +20896,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 2 Tinh Chất Chấn Thương",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20915,7 +20915,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 3 Tinh Chất Chấn Thương",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20934,7 +20934,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 4 Tinh Chất Chấn Thương",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20953,7 +20953,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 5 Tinh Chất Chấn Thương",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20972,7 +20972,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 6 Tinh Chất Chấn Thương",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -20991,7 +20991,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 7 Tinh Chất Chấn Thương",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21010,7 +21010,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 8 Tinh Chất Chấn Thương",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21029,7 +21029,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 9 Tinh Chất Chấn Thương",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21048,7 +21048,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 10 Tinh Chất Chấn Thương",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21067,7 +21067,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 1 Tinh Chất Phòng Thủ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21086,7 +21086,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 2 Tinh Chất Phòng Thủ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21105,7 +21105,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 3 Tinh Chất Phòng Thủ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21124,7 +21124,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 4 Tinh Chất Phòng Thủ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21143,7 +21143,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 5 Tinh Chất Phòng Thủ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21162,7 +21162,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 6 Tinh Chất Phòng Thủ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21181,7 +21181,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 7 Tinh Chất Phòng Thủ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21200,7 +21200,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 8 Tinh Chất Phòng Thủ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21219,7 +21219,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 9 Tinh Chất Phòng Thủ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21238,7 +21238,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 10 Tinh Chất Phòng Thủ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21257,7 +21257,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 1 Tinh Chất Nhu Nhược",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21276,7 +21276,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 2 Tinh Chất Nhu Nhược",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21295,7 +21295,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 3 Tinh Chất Nhu Nhược",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21314,7 +21314,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 4 Tinh Chất Nhu Nhược",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21333,7 +21333,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 5 Tinh Chất Nhu Nhược",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21352,7 +21352,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 6 Tinh Chất Nhu Nhược",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21371,7 +21371,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 7 Tinh Chất Nhu Nhược",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21390,7 +21390,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 8 Tinh Chất Nhu Nhược",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21409,7 +21409,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 9 Tinh Chất Nhu Nhược",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21428,7 +21428,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 10 Tinh Chất Nhu Nhược",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21447,7 +21447,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 1 Tinh Chất Cường Hóa",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21466,7 +21466,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 2 Tinh Chất Cường Hóa",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21485,7 +21485,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 3 Tinh Chất Cường Hóa",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21504,7 +21504,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 4 Tinh Chất Cường Hóa",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21523,7 +21523,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 5 Tinh Chất Cường Hóa",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21542,7 +21542,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 6 Tinh Chất Cường Hóa",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21561,7 +21561,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 7 Tinh Chất Cường Hóa",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21580,7 +21580,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 8 Tinh Chất Cường Hóa",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21599,7 +21599,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 9 Tinh Chất Cường Hóa",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -21618,7 +21618,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cấp 10 Tinh Chất Cường Hóa",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -28941,7 +28941,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Xích Vân Phát Quang - IV",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -29644,7 +29644,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Hồ Điệp Xanh Lam - IV",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -29663,7 +29663,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Hồ Điệp Xanh Lục - IV",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -29682,7 +29682,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Hồ Điệp Tím - IV",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -29701,7 +29701,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Hồ Điệp Hồng - IV",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -29721,7 +29721,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Hồ Điệp Xanh Lam Phát Quang - IV",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -29740,7 +29740,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Hồ Điệp Xanh Lục Phát Quang - IV",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -29759,7 +29759,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Hồ Điệp Tím Phát Quang - IV",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -29778,7 +29778,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Cánh Hồ Điệp Hồng Phát Quang - IV",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -29797,7 +29797,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Phượng Hoàng Phát Quang - IV",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -29816,7 +29816,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Áo Choàng Trắng - I",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -29835,7 +29835,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Áo Choàng Trắng - II",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -29854,7 +29854,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Áo Choàng Trắng - III",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -29873,7 +29873,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Áo Choàng Trắng - IV",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -29892,7 +29892,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Lam Quang - IV",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -29911,7 +29911,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Hồng Quang - IV",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -29930,7 +29930,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Phương Hoàng Đen- IV",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -29949,7 +29949,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Phượng Hoàng Đen Phát Quang - IV",
 		"ar": "",
 		"it": "",
 		"pl": "",
