--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -182,7 +182,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tỷ Lệ Nở Trứng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -277,7 +277,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chỉ Số Ngọc",
         "ar":"",
         "it":"",
         "pl":"",
