--- a/Translation/item.json
+++ b/Translation/item.json
@@ -13728,6 +13728,25 @@
         "th":"",
         "id":""
     },
+    "item.5060.name":{
+        "en":"Black-Red Wedding Suit",
+        "fr":"Costume de Mariage Rouge-Noir",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.6000.name":{
         "en":"Initial Hairstyle (Green)",
         "fr":"Coiffure Initiale (Vert)",
@@ -29940,6 +29959,44 @@
 	"item.71092.name": {
 		"en": "Glowing Black Phoenix - IV",
 		"fr": "Phoenix Noir Fluorescent - IV",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71096.name": {
+		"en": "Red Butterfly - IV",
+		"fr": "Papillon Rouge - IV",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71100.name": {
+		"en": "Glowing Red Butterfly - IV",
+		"fr": "Papillon Rouge Fluorescent - IV",
 		"es": "",
 		"zh-cn": "",
 		"zh-tw": "",
